[gd_scene load_steps=41 format=3 uid="uid://bh365u5asy64d"]

[ext_resource type="Script" uid="uid://ci23ylwu5eaaj" path="res://Objects/collectibles.gd" id="1_0fsfb"]
[ext_resource type="Shader" uid="uid://ca5cscdeu88wa" path="res://Scripts/bw_shader.tres" id="2_frybr"]
[ext_resource type="Texture2D" uid="uid://c61wg5ycwdyij" path="res://Assets/PotionSheet_NOXIT.png" id="3_k3pwr"]
[ext_resource type="Texture2D" uid="uid://b8xivvfn1bmah" path="res://Assets/DoomlandKit/DoomlandKit/Single-Items/WidePotion1.png" id="4_ubueb"]
[ext_resource type="Texture2D" uid="uid://bxo6rq3gn13mo" path="res://Assets/DoomlandKit/DoomlandKit/Single-Items/WidePotion2.png" id="5_af7v7"]
[ext_resource type="Texture2D" uid="uid://d0t3lfc60gas8" path="res://Assets/DoomlandKit/DoomlandKit/Single-Items/WidePotion3.png" id="6_2uv3w"]
[ext_resource type="Texture2D" uid="uid://p2s61kw1f1rn" path="res://Assets/DoomlandKit/DoomlandKit/Single-Items/WidePotion4.png" id="7_f73ap"]
[ext_resource type="Texture2D" uid="uid://cxhhlxdrvis0g" path="res://Assets/DoomlandKit/DoomlandKit/Single-Items/WidePotion-outline1.png" id="8_bmb1f"]
[ext_resource type="Texture2D" uid="uid://cshhhtro1i1i6" path="res://Assets/DoomlandKit/DoomlandKit/Single-Items/WidePotion-outline2.png" id="9_415re"]
[ext_resource type="Texture2D" uid="uid://d0rwaya3r4fkc" path="res://Assets/DoomlandKit/DoomlandKit/Single-Items/WidePotion-outline3.png" id="10_3fog6"]
[ext_resource type="Texture2D" uid="uid://dfmehlw5q00sq" path="res://Assets/DoomlandKit/DoomlandKit/Single-Items/WidePotion-outline4.png" id="11_k3lg7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h3m33"]
shader = ExtResource("2_frybr")

[sub_resource type="AtlasTexture" id="AtlasTexture_8l05d"]
atlas = ExtResource("3_k3pwr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rwjg"]
atlas = ExtResource("3_k3pwr")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpjvu"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_abj2d"]
atlas = ExtResource("3_k3pwr")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gok73"]
atlas = ExtResource("3_k3pwr")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxpv6"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbyd3"]
atlas = ExtResource("3_k3pwr")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q1y5"]
atlas = ExtResource("3_k3pwr")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_arqhv"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_68iew"]
atlas = ExtResource("3_k3pwr")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3m33"]
atlas = ExtResource("3_k3pwr")
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqulr"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gkks"]
atlas = ExtResource("3_k3pwr")
region = Rect2(64, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjigk"]
atlas = ExtResource("3_k3pwr")
region = Rect2(64, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnmxm"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mi3h"]
atlas = ExtResource("3_k3pwr")
region = Rect2(80, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpfox"]
atlas = ExtResource("3_k3pwr")
region = Rect2(80, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr8vk"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv3y6"]
atlas = ExtResource("3_k3pwr")
region = Rect2(96, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_undbw"]
atlas = ExtResource("3_k3pwr")
region = Rect2(96, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwer6"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nok1"]
atlas = ExtResource("3_k3pwr")
region = Rect2(128, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhsik"]
atlas = ExtResource("3_k3pwr")
region = Rect2(128, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_slipn"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fsfb"]
atlas = ExtResource("3_k3pwr")
region = Rect2(336, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_frybr"]
atlas = ExtResource("3_k3pwr")
region = Rect2(336, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3pwr"]
atlas = ExtResource("3_k3pwr")
region = Rect2(352, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jpjvu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l05d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rwjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpjvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abj2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gok73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxpv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbyd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q1y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arqhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68iew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3m33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqulr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gkks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjigk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnmxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mi3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpfox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr8vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv3y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_undbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwer6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nok1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhsik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slipn")
}],
"loop": true,
"name": &"_selected_frames",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nok1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhsik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slipn")
}],
"loop": true,
"name": &"armor",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68iew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3m33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqulr")
}],
"loop": true,
"name": &"haste",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l05d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rwjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpjvu")
}],
"loop": true,
"name": &"heal_full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abj2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gok73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxpv6")
}],
"loop": true,
"name": &"heal_small",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gkks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjigk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnmxm")
}],
"loop": true,
"name": &"knockback",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv3y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_undbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwer6")
}],
"loop": true,
"name": &"knockback_resistance",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mi3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpfox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr8vk")
}],
"loop": true,
"name": &"regeneration",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fsfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frybr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3pwr")
}],
"loop": true,
"name": &"speed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ubueb")
}, {
"duration": 1.0,
"texture": ExtResource("5_af7v7")
}, {
"duration": 1.0,
"texture": ExtResource("6_2uv3w")
}, {
"duration": 1.0,
"texture": ExtResource("7_f73ap")
}],
"loop": true,
"name": &"zz_heal_old",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_bmb1f")
}, {
"duration": 1.0,
"texture": ExtResource("9_415re")
}, {
"duration": 1.0,
"texture": ExtResource("10_3fog6")
}, {
"duration": 1.0,
"texture": ExtResource("11_k3lg7")
}],
"loop": true,
"name": &"zz_speed_old",
"speed": 5.0
}]

[node name="Collectables" type="Node2D"]
scale = Vector2(0.4876657, 0.4876657)
script = ExtResource("1_0fsfb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_h3m33")
sprite_frames = SubResource("SpriteFrames_jpjvu")
animation = &"speed"

[node name="Timer_Speed" type="Timer" parent="."]

[node name="Timer_Haste" type="Timer" parent="."]

[node name="Timer_Armor" type="Timer" parent="."]

[node name="Timer_Knockback" type="Timer" parent="."]

[node name="Timer_Knockback_Resistance" type="Timer" parent="."]

[node name="Timer_Regeneration" type="Timer" parent="."]

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="timeout" from="Timer_Speed" to="." method="_on_timer_speed_timeout"]
[connection signal="timeout" from="Timer_Haste" to="." method="_on_timer_haste_timeout"]
[connection signal="timeout" from="Timer_Armor" to="." method="_on_timer_armor_timeout"]
[connection signal="timeout" from="Timer_Knockback" to="." method="_on_timer_knockback_timeout"]
[connection signal="timeout" from="Timer_Knockback_Resistance" to="." method="_on_timer_knockback_resistance_timeout"]
[connection signal="timeout" from="Timer_Regeneration" to="." method="_on_timer_regeneration_timeout"]
